<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>eu.doppel-helix.app.bitwardenagent</groupId>
    <artifactId>bitwardenagent</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>
    <name>Bitwarden Agent</name>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>eu.doppelhelix.app.bitwardenagent.BitwardenMain</exec.mainClass>
        <dependency.version.junit>6.0.2</dependency.version.junit>
        <dependency.version.ikonli>12.4.0</dependency.version.ikonli>
    </properties>

    <scm>
        <url>https://github.com/matthiasblaesing/bitwardenagent</url>
        <connection>scm:git:https://github.com/matthiasblaesing/bitwardenagent.git</connection>
        <developerConnection>scm:git:git@github.com:matthiasblaesing/bitwardenagent.git</developerConnection>
      <tag>bitwardenagent-0.1</tag>
  </scm>

    <build>
        <finalName>${artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <forceCreation>true</forceCreation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                            <resource>LICENSE</resource>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                            <resource>META-INF/NOTICE.markdown</resource>
                        </transformer>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <manifestEntries>
                                <Main-Class>${exec.mainClass}</Main-Class>
                                <Add-Opens>java.desktop/sun.awt.X11</Add-Opens>
                                <Multi-Release>true</Multi-Release>
                            </manifestEntries>
                        </transformer>
                    </transformers>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>META-INF/versions/9/module-info.class</exclude>
                                <exclude>META-INF/versions/21/module-info.class</exclude>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                                <exclude>META-INF/native-image/ikonli-generated/reflect-config.json</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>about.html</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <!-- Required to support mockito attaching to the running VM -->
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>1.83</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.21.0</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.7</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-swing</artifactId>
            <version>${dependency.version.ikonli}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>${dependency.version.ikonli}</version>
        </dependency>
        <dependency>
            <groupId>com.amdelamar</groupId>
            <artifactId>jotp</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${dependency.version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${dependency.version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${dependency.version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.21.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>build-binaries</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jreleaser</groupId>
                        <artifactId>jdks-maven-plugin</artifactId>
                        <version>1.21.0</version>
                        <inherited>false</inherited>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>setup-disco</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <pkgs>
                                <pkg>
                                    <name>corretto-linux-amd64</name>
                                    <distribution>corretto</distribution>
                                    <platform>linux-x86_64</platform>
                                    <version><![CDATA[25..<26]]></version>
                                    <archiveType>tar.gz</archiveType>
                                </pkg>
                                <pkg>
                                    <name>corretto-windows-amd64</name>
                                    <distribution>corretto</distribution>
                                    <platform>windows-x86_64</platform>
                                    <version><![CDATA[25..<26]]></version>
                                </pkg>
                                <pkg>
                                    <name>corretto-macos-aarch64</name>
                                    <distribution>corretto</distribution>
                                    <platform>macos-aarch64</platform>
                                    <version><![CDATA[25..<26]]></version>
                                    <archiveType>tar.gz</archiveType>
                                </pkg>
                            </pkgs>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>java</executable>
                                    <arguments>
                                        <argument>${basedir}/src/main/packaging/Packaging.java</argument>
                                        <argument>${basedir}</argument>
                                        <argument>${artifactId}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>